# SaydoGap-Desakota

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
main/R/: Figure1.R  Figure2.R  Figure4.R  Figure5.R  SFig1_landscape.R  SFig2_LPM Parameter Sensitivity.R  SFig3_STable345.Rmd  SFig4_Spatial_vs_NC.R  STable18_transformation.R  STable2_GapRegression.R  STable67_GAM_Controls.R  STable8_Robustness_ZonalBehavior.R
main/prompter-python/: prompter-0.1.7-py3-none-any.whl
main/python/analysis/: Figure3.py  dataset.py
main/python/geometric/: blue_exposure_index.py  coastal_accessibility_index.py  crop_and_greenspace_desakota_index.py  crop_only_desakota_index.py  cropland_ratio_index.py  get_park_polygons_from_OSM.py  get_suburban_green_space_from_OSM.py  get_urban_boundary.py  get_urban_residential_area_from_OSM1.py  get_urban_residential_area_from_OSM2.py  get_water_body_from_OSM.py  green_exposure_index.py  gross_domestic_product_index.py  normalization.py  park_accessibility_index.py  park_proportion_index.py  patch_index.py  run.py  weight_sensitivity_desakota_index.py  window_sensitivity_desakota_index.py
main/python/product/: classification.py  config.py  preprocessing.py  translation.py
main/python/survey/: config.py  preprocessing.py
