[project]
name = "saydogap-desakota"
version = "1.0.0dev"
description = "Replicable Codes for Say-Do Gap & Desakota in Southeast Asian Cities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip>=25.3",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "matplotlib>=3.9.4",
    "langdetect>=1.0.9",
    "spacy>=3.8.11",
    "torch>=2.9.1",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "shapely>=2.0.4",
    "scipy>=1.17.1",
    "geopandas>=1.1.1",
    "rasterio>=1.3.9",
    "scikit-image>=0.26.0",
    "pyproj>=3.7.2",
    "osmnx>=2.0",
    "prompter",
]

[tool.uv.sources]
prompter = { path = "main/prompter-python/prompter-0.1.7-py3-none-any.whl" }
